updated soe views and removed unnecessary code

--- a/templates/home/flames_register.html
+++ b/templates/home/flames_register.html
@@ -843,7 +843,7 @@ Register for {{ course.title }} | F.L.A.M.E.S🔥 | Angaar
                 if (data.is_available) {
                     setValidState(elements.username, feedbackElement, 'Username is available');
                 } else {
-                    setInvalidState(elements.username, feedbackElement, 'Username is already taken');
+                    setInvalidState(elements.username, feedbackElement, 'Username is already taken, Login to register');
                 }
             })
             .catch(error => {
