--- a/templates/student/flames/flames.html
+++ b/templates/student/flames/flames.html
@@ -579,6 +579,7 @@ active
                     <p class="flames-subtitle">{{ registration.course.subtitle }}</p>
                 </div>
                 <span class="flames-status status-{{ registration.status|lower }}">{{ registration.status }}</span>
+                <a href="{% url 'student_view_registration' registration.course.slug %}" class="btn btn-sm mx-2 rounded-3 btn-primary">View More</a>
             </div>
             <div class="flames-body">
                 <div class="row">
@@ -659,6 +660,7 @@ active
                 </span>
 
                 {% endif %}
+
             </div>
 
         </div>
